[gd_scene load_steps=9 format=3 uid="uid://b0lpsnp64ueru"]

[ext_resource type="Script" path="res://Scripts/Minigames/minigame_player.gd" id="1_xud8t"]
[ext_resource type="Texture2D" uid="uid://bk08632714t3" path="res://Assets/Sprites/ExitX.png" id="2_4walf"]
[ext_resource type="Shader" path="res://Scripts/Shaders/pixelate.gdshader" id="2_finqc"]
[ext_resource type="Texture2D" uid="uid://tjsx431yoibm" path="res://Assets/Sprites/Coin_Frame01.png" id="3_nvnoj"]


[gd_scene load_steps=37 format=3 uid="uid://b0lpsnp64ueru"]

[ext_resource type="Script" path="res://Scripts/Minigames/minigame_player.gd" id="1_xud8t"]
[ext_resource type="Shader" path="res://Scripts/Shaders/pixelate.gdshader" id="2_finqc"]
[ext_resource type="Texture2D" uid="uid://dd8pn8sys5vli" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame1.png" id="3_f4hnl"]
[ext_resource type="Texture2D" uid="uid://dx0j1nhwyeq10" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame2.png" id="4_3n2cv"]
[ext_resource type="Texture2D" uid="uid://g6cwu1vcj1r3" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame3.png" id="5_rd503"]
[ext_resource type="Texture2D" uid="uid://bparvw8gvr5lf" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame4.png" id="6_25vn1"]
[ext_resource type="Texture2D" uid="uid://c6m23ncd6dj2o" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame5.png" id="7_hbef5"]
[ext_resource type="Texture2D" uid="uid://8573xnadydxv" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame6.png" id="8_ec04e"]
[ext_resource type="Texture2D" uid="uid://bk037fm38q7ix" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame7.png" id="9_w33l6"]
[ext_resource type="Texture2D" uid="uid://be4jjsijljkwm" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame8.png" id="10_enqop"]
[ext_resource type="Texture2D" uid="uid://p144nfb3i5je" path="res://Assets/Monster1_Pixel_Art/Movement/Idle_Anim/Monster1_Idle_Frame9.png" id="11_r1hwp"]
[ext_resource type="Texture2D" uid="uid://dnj0sevpqi2ua" path="res://Assets/Monster1_Pixel_Art/Movement/Jump_Anim/Monster1_Jump_Frame2.png" id="12_7jesg"]
[ext_resource type="Texture2D" uid="uid://d3gc3qripv7ld" path="res://Assets/Monster1_Pixel_Art/Movement/Jump_Anim/Monster1_Jump_Frame3.png" id="13_ia0h6"]
[ext_resource type="Texture2D" uid="uid://bsfdimq1ovsmk" path="res://Assets/Monster1_Pixel_Art/Movement/Jump_Anim/Monster1_Jump_Frame4.png" id="14_yheno"]
[ext_resource type="Texture2D" uid="uid://b48t0tfhf0tcw" path="res://Assets/Monster1_Pixel_Art/Movement/Walk_Left/Monster1_Walk_Left_Frame1.png" id="15_1t0iq"]
[ext_resource type="Texture2D" uid="uid://b20076qcn0qtv" path="res://Assets/Monster1_Pixel_Art/Movement/Walk_Left/Monster1_Walk_Left_Frame2.png" id="16_quud6"]
[ext_resource type="Texture2D" uid="uid://cexsgg28m66b1" path="res://Assets/Monster1_Pixel_Art/Movement/Walk_Right/Monster1_Walk_Right_Frame1.png" id="17_r2gus"]
[ext_resource type="Texture2D" uid="uid://bkw4a0doohbw2" path="res://Assets/Monster1_Pixel_Art/Movement/Walk_Right/Monster1_Walk_Right_Frame2.png" id="18_n4gh6"]
[ext_resource type="Texture2D" uid="uid://dj2yidfqtpnfc" path="res://Assets/Monster1_Pixel_Art/Faces/Grumpy_Face/Monster1_Face_Grumpy_Frame1.png" id="19_argeb"]
[ext_resource type="Texture2D" uid="uid://crmupsfsspuk3" path="res://Assets/Monster1_Pixel_Art/Faces/Grumpy_Face/Monster1_Face_Grumpy_Frame2.png" id="20_ditr1"]
[ext_resource type="Texture2D" uid="uid://cgcx5d2h1ukcn" path="res://Assets/Monster1_Pixel_Art/Faces/Hungry_Face/Monster1_Face_Hungry_Frame1.png" id="21_4e5fw"]
[ext_resource type="Texture2D" uid="uid://s5iawa2a28uf" path="res://Assets/Monster1_Pixel_Art/Faces/Hungry_Face/Monster1_Face_Hungry_Frame2.png" id="22_2qj6k"]
[ext_resource type="Texture2D" uid="uid://7hx26xr76y2c" path="res://Assets/Monster1_Pixel_Art/Faces/Idle_Face/Monster1_Face_Idle_Frame1.png" id="23_djltc"]
[ext_resource type="Texture2D" uid="uid://da50s41b6rv4u" path="res://Assets/Monster1_Pixel_Art/Faces/Idle_Face/Monster1_Face_Idle_Frame2.png" id="24_tttm4"]
[ext_resource type="Texture2D" uid="uid://d2sqkxxig7xv3" path="res://Assets/Monster1_Pixel_Art/Faces/Idle_Face/Monster1_Face_Idle_Frame3.png" id="25_u1hy6"]
[ext_resource type="Texture2D" uid="uid://bk8ie8umh8lwi" path="res://Assets/Monster1_Pixel_Art/Faces/Idle_Face/Monster1_Face_Idle_Frame4.png" id="26_23gra"]
[ext_resource type="Texture2D" uid="uid://cw3bv8322m70l" path="res://Assets/Monster1_Pixel_Art/Faces/Sleepy_Face/Monster1_Face_Sleepy_Frame1.png" id="27_2v3nv"]
[ext_resource type="Texture2D" uid="uid://bnl6sdkuljdwf" path="res://Assets/Monster1_Pixel_Art/Faces/Sleepy_Face/Monster1_Face_Sleepy_Frame2.png" id="28_ua8kt"]
[ext_resource type="AudioStream" uid="uid://dsww52mo5ygx6" path="res://Assets/Sounds/Retro Sounds 1/Audio/jump1.ogg" id="29_8lvc3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikv8f"]
size = Vector2(93, 132)

[sub_resource type="Gradient" id="Gradient_o26xm"]
offsets = PackedFloat32Array(0, 0.974026)
colors = PackedColorArray(3.60981e-08, 0, 0.279022, 1, 0, 0.157728, 0.240175, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vbke6"]
gradient = SubResource("Gradient_o26xm")


[sub_resource type="ShaderMaterial" id="ShaderMaterial_k7fhv"]


shader = ExtResource("2_finqc")
shader_parameter/x_pixel_size = 6
shader_parameter/y_pixel_size = 6
shader_parameter/noise_intensity = 0.5
shader_parameter/seed = 0.5

[sub_resource type="SpriteFrames" id="SpriteFrames_r2qqt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_f4hnl")
}, {
"duration": 1.0,
"texture": ExtResource("4_3n2cv")
}, {
"duration": 1.0,
"texture": ExtResource("5_rd503")
}, {
"duration": 1.0,
"texture": ExtResource("6_25vn1")
}, {
"duration": 1.0,
"texture": ExtResource("7_hbef5")
}, {
"duration": 1.0,
"texture": ExtResource("8_ec04e")
}, {
"duration": 1.0,
"texture": ExtResource("9_w33l6")
}, {
"duration": 1.0,
"texture": ExtResource("10_enqop")
}, {
"duration": 1.0,
"texture": ExtResource("11_r1hwp")
}],
"loop": true,
"name": &"Idle_Animation",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("12_7jesg")
}, {
"duration": 1.0,
"texture": ExtResource("13_ia0h6")
}, {
"duration": 1.0,
"texture": ExtResource("14_yheno")
}, {
"duration": 1.0,
"texture": ExtResource("13_ia0h6")
}, {
"duration": 1.0,
"texture": ExtResource("12_7jesg")
}],
"loop": false,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_1t0iq")
}, {
"duration": 1.0,
"texture": ExtResource("16_quud6")
}],
"loop": true,
"name": &"Walk_Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_r2gus")
}, {
"duration": 1.0,
"texture": ExtResource("18_n4gh6")
}],
"loop": true,
"name": &"Walk_Right",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1le3u"]
shader = ExtResource("2_finqc")
shader_parameter/x_pixel_size = 6
shader_parameter/y_pixel_size = 6
shader_parameter/noise_intensity = 0.5
shader_parameter/seed = 0.5

[sub_resource type="SpriteFrames" id="SpriteFrames_jbys7"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("19_argeb")
}, {
"duration": 2.0,
"texture": ExtResource("20_ditr1")
}, {
"duration": 2.0,
"texture": ExtResource("19_argeb")
}, {
"duration": 2.0,
"texture": ExtResource("20_ditr1")
}],
"loop": true,
"name": &"Grumpy_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("21_4e5fw")
}, {
"duration": 2.0,
"texture": ExtResource("22_2qj6k")
}, {
"duration": 2.0,
"texture": ExtResource("21_4e5fw")
}, {
"duration": 2.0,
"texture": ExtResource("22_2qj6k")
}],
"loop": true,
"name": &"Hungry_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_djltc")
}, {
"duration": 1.0,
"texture": ExtResource("24_tttm4")
}, {
"duration": 1.0,
"texture": ExtResource("23_djltc")
}],
"loop": true,
"name": &"Idle_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("25_u1hy6")
}, {
"duration": 2.0,
"texture": ExtResource("24_tttm4")
}],
"loop": true,
"name": &"Move_Left_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("26_23gra")
}, {
"duration": 2.0,
"texture": ExtResource("24_tttm4")
}],
"loop": true,
"name": &"Move_Right_Face",
"speed": 5.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("27_2v3nv")
}, {
"duration": 2.0,
"texture": ExtResource("28_ua8kt")
}, {
"duration": 2.0,
"texture": ExtResource("27_2v3nv")
}, {
"duration": 2.0,
"texture": ExtResource("28_ua8kt")
}],
"loop": true,
"name": &"Sleepy_Face",
"speed": 5.0
}]

[node name="BlueMonster" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
platform_floor_layers = 4294901760
script = ExtResource("1_xud8t")

[node name="Points2" type="RichTextLabel" parent="CharacterBody2D"]
z_index = 4
offset_left = 728.0
offset_top = -410.0
offset_right = 828.0
offset_bottom = -320.0
theme_override_font_sizes/normal_font_size = 60
text = "2"

[node name="Points" type="TextEdit" parent="CharacterBody2D"]
visible = false
visibility_layer = 3
offset_left = 576.0
offset_top = -451.0
offset_right = 800.0
offset_bottom = -336.0
theme_override_colors/background_color = Color(1, 1, 1, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0.72, 0.72, 0.72, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-3.5, -3)
shape = SubResource("RectangleShape2D_ikv8f")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
visible = false
position = Vector2(-0.499997, 1.5)
scale = Vector2(1.17188, 1.92188)
texture = SubResource("GradientTexture2D_vbke6")

[node name="Body" type="AnimatedSprite2D" parent="CharacterBody2D"]
material = SubResource("ShaderMaterial_nbui5")
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_r2qqt")
animation = &"Idle_Animation"
autoplay = "Idle_Animation"

[node name="Face" type="AnimatedSprite2D" parent="CharacterBody2D"]
material = SubResource("ShaderMaterial_1le3u")
position = Vector2(-2, -2)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_jbys7")
animation = &"Hungry_Face"
autoplay = "Idle_Face"

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]

[node name="ExitBtn" type="Button" parent="CharacterBody2D"]
z_index = 3
offset_left = 657.0
offset_top = 305.0
offset_right = 791.0
offset_bottom = 444.0
tooltip_text = "Exit minigame"
theme_override_colors/font_pressed_color = Color(0.703656, 0.68174, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 45
icon = ExtResource("2_4walf")
flat = true
expand_icon = true

[node name="CoinIcon" type="Sprite2D" parent="CharacterBody2D"]
z_index = 5
material = SubResource("ShaderMaterial_k7fhv")
position = Vector2(645, -364)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_nvnoj")

[node name="Points3" type="RichTextLabel" parent="CharacterBody2D"]
z_index = 5
offset_left = 679.0
offset_top = -310.0
offset_right = 929.0
offset_bottom = -270.0
text = "Remaining: 10"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="CharacterBody2D"]
position = Vector2(-152, -760)
stream = ExtResource("29_8lvc3")
volume_db = -9.789

[connection signal="pressed" from="CharacterBody2D/ExitBtn" to="CharacterBody2D" method="_on_exit_btn_pressed"]
